feat(parametro): ajusta nome de parametro para teste

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -17,5 +17,5 @@ jobs:
           username: ${{ secrets.AWX_USER }}
           password: ${{ secrets.AWX_PASSWORD }}
           customHeaders: '{"Content-Type": "application/json"}'
-          data: '{"name": "${{ github.event.head_commit.message }}"}'
+          data: '{"name": "${{ github.event.head_commit.link }}"}'
 
